@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-08T08:20:26Z",
-  "count_outdated" : 325,
-  "uniques_outdated" : 169,
+  "timestamp" : "2022-09-08T16:23:38Z",
+  "count_outdated" : 326,
+  "uniques_outdated" : 170,
   "count" : 341,
   "uniques" : 180,
   "clones" : [
-    {
-      "timestamp": "2022-08-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-08-26T00:00:00Z",
       "count": 2,
